# bstoll-_-ocmcp

./: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  ocmcp.go
.github/workflows/: bazel.yml  lint.yml
client/: client.go
internal/yang/: BUILD.bazel  model.go  yang.go
