load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",
)

go_library(
    name = "ocmcp_lib",
    srcs = ["ocmcp.go"],
    importpath = "github.com/bstoll/ocmcp",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/yang",
        "@com_github_golang_glog//:glog",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
    ],
)

go_binary(
    name = "ocmcp",
    data = ["@openconfig_public//:all"],
    embed = [":ocmcp_lib"],
    visibility = ["//visibility:public"],
)
