module(
    name = "ocmcp",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.4")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = [
        "gazelle:build_tags fts5",
    ],
    path = "github.com/mattn/go-sqlite3",
)
use_repo(go_deps, "com_github_golang_glog", "com_github_mattn_go_sqlite3", "com_github_modelcontextprotocol_go_sdk", "com_github_openconfig_goyang")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "openconfig_public",
    build_file_content = """
filegroup(
    name = "all",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "d06e471a1cf25baf79165dbc17936fe2f9ceea38e22db156edf2628b2d3779b8",
    strip_prefix = "public-5.4.0",
    urls = ["https://github.com/openconfig/public/archive/refs/tags/v5.4.0.tar.gz"],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:0000f9dc0290f8eaf0ecceafbc35e803649087ea7879570fbc78372df7ac649b",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64")
