module(
    name = "ocmcp",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.50.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = [
        "gazelle:build_tags fts5",
    ],
    path = "github.com/mattn/go-sqlite3",
)
use_repo(go_deps, "com_github_golang_glog", "com_github_mattn_go_sqlite3", "com_github_modelcontextprotocol_go_sdk", "com_github_openconfig_goyang")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "openconfig_public",
    build_file_content = """
filegroup(
    name = "all",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "d06e471a1cf25baf79165dbc17936fe2f9ceea38e22db156edf2628b2d3779b8",
    strip_prefix = "public-5.4.0",
    urls = ["https://github.com/openconfig/public/archive/refs/tags/v5.4.0.tar.gz"],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:847433844c7e04bcf07a3a0f0f5a8de554c6df6fa9e3e3ab14d3f6b73d780235",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64")
